...

    Box(
        modifier = modifier
            .fillMaxSize()
            .padding(horizontal = 24.dp)
            .padding(top = 100.dp)
            .testTag("home_screen")
    ) {
        when {
            state.isLoading -> {
                CircularProgressIndicator(
                    modifier = Modifier.align(Alignment.Center)
                )
...
                ) {
                    items(reviews, key = { it.id }) { review ->
                        // Contenedor con tag genérico para listar/contar ítems
                        Box(
                            modifier = Modifier
                                .fillMaxWidth()
                                .testTag("review_item")
                        ) {
                            // Tag específico para el objetivo de click en el review
                            ReviewCard(
                                review = review,
                                modifier = Modifier
                                    .fillMaxWidth()
...
