...

        AppButton(
            texto = stringResource(R.string.iniciar_sesion),
            modifier = Modifier
                .padding(vertical = 8.dp)
                .fillMaxWidth(0.7f)
                .testTag("btn_login"),
            onClick = onLoginClick,
            height = 60.dp, // más alto
            fontSize = 22.sp
        )

        AppButton(
            texto = stringResource(R.string.crear_cuenta),
            modifier = Modifier
                .padding(vertical = 8.dp)
                .fillMaxWidth(0.7f)
                .testTag("btn_register"),
            onClick = onRegisterClick,
            height = 60.dp,
            fontSize = 22.sp
        )
    }
}
...
