...

    state.gastroBar?.let { gastroBar ->
        Column(
            modifier = modifier
                .fillMaxSize()
                .verticalScroll(rememberScrollState())
                .testTag("detail_screen")
        ) {
            HeaderImage(imageUrl = gastroBar.imagePlace)
            PlaceInfoSection(gastroBar = gastroBar)

            Spacer(modifier = Modifier.height(16.dp))

...
